# prakasa_windows_worker

./: .gitignore  AGENTS.md  README.md  USER_GUIDE.md
.github/workflows/: c-cpp.yml
installer/SetupScripts/nim/: license.txt  nim_setup.nsi  ui_nim_setup.nsh
installer/SetupScripts/nim/skin/: finishpage.xml  install.xml  msgBox.xml
src/parallax/: CMakeLists.txt  main.cpp
src/parallax/cli/: command_parser.cpp
src/parallax/cli/commands/: base_command.h  check_command.cpp  install_command.cpp  model_commands.cpp  model_commands.h
src/parallax/config/: config_manager.cpp  config_manager.h
src/parallax/environment/: software_installer2.cpp  system_checker.cpp
